--- a/code/supplemental_v2.Rmd
+++ b/code/supplemental_v2.Rmd
@@ -50,9 +50,9 @@ legend("bottom", inset = c(0), legend=n, bty = "n", horiz = T, cex = 1.2, adj = 
 }
 ```
 
-**S1 Fig. Distribution of cancer type on UMAP clusters.** Each panel shows the identity of 
+**Figure S1. Distribution of cancer type on UMAP clusters.** Each panel shows the identity of 
 individual tumors by one of 23 cancer types projected onto the cluster UMAP identified 
-in **Fig 1B of the main text**. The colors indicate the tumor's cluster identity.
+in **Figure 1B of the main text**. The colors indicate the tumor's cluster identity.
 
 \newpage
 
@@ -101,8 +101,8 @@ for(n in cancer_w_subtypes[1:19]) {
 }
 ```
 
-**S2 Fig. Histological subtypes.** Each panel shows the histological subtypes of one of the 23 
-cancers projected onto the tumors of the UMAP from **Fig 1B of the main text**. The colors indicate the tumor's histological subtype identity.
+**Figure S2. Histological subtypes.** Each panel shows the histological subtypes of one of the 23 
+cancers projected onto the tumors of the UMAP from **Figure 1B of the main text**. The colors indicate the tumor's histological subtype identity.
 
 \newpage
 
@@ -166,8 +166,8 @@ legend("top", inset = c(0), legend=n, bty = "n", horiz = T, cex = 1.2)
 }
 ```
 
-**S3 Fig. Distribution of mismatch repair genes on UMAP clusters.** Each panel shows one of 15 
-genes involved in genome stability projected on the UMAP from **Fig 1B of the main text**. The colors indicate the tumor's cluster identity.
+**Figure S3. Distribution of mismatch repair genes on UMAP clusters.** Each panel shows one of 15 
+genes involved in genome stability projected on the UMAP from **Figure 1B of the main text**. The colors indicate the tumor's cluster identity.
 
 \newpage
 
@@ -246,7 +246,7 @@ legend("top", inset = c(0), legend=n, bty = "n", horiz = T, cex = 1.2)
 
 ```
 
-**S4 Fig. Distribution of oncogenes/tumor suppressors on UMAP clusters.** Each panel shows shows one of the twelve oncogenes/tumor suppressors projected onto the tumors of the UMAP from **Fig 1B of the main text**. The colors indicate the tumor's cluster identity.
+**Figure S4. Distribution of oncogenes/tumor suppressors on UMAP clusters.** Each panel shows shows one of the twelve oncogenes/tumor suppressors projected onto the tumors of the UMAP from **Figure 1B of the main text**. The colors indicate the tumor's cluster identity.
 
 \newpage 
 
@@ -385,4 +385,4 @@ AABB
 s5.1 + s5.2 + plot_annotation(tag_levels = "A") + plot_layout(design = layout)
 ```
 
-**S5 Fig. Performance comparison of different classification model - knn, COCA, iCluster, tissue-of-origin (tis).** A) Empirical cumulative distribution function comparing time of death prediction of all classification models with actual time of death (dark green). B) Error distribution plot of predicted and actual time of death.
+**Figure S5. Performance comparison of different classification model - knn, COCA, iCluster, tissue-of-origin (tis).** A) Empirical cumulative distribution function comparing time of death prediction of all classification models with actual time of death (dark green). B) Error distribution plot of predicted and actual time of death.
