--- a/text/survival.Rmd
+++ b/text/survival.Rmd
@@ -7,7 +7,7 @@ from the CDC. The model estimates the effect of cancer type and cluster-specific
 cancer effects independently, resulting in a cancer and cluster-specific
 estimate of an effective age function and the aging rate multiplier, $k$.
 
-To illustrate the model, we simulate survival for six related groups (**Fig
+To illustrate the model, we simulate survival for six related groups (**Figure
 5A**). We start with a cohort of women aged 30 randomly selected from the US
 population, and show expected survival (light blue). We then use typical values
 from the posterior samples to set the effective age of that cohort to the
@@ -25,7 +25,7 @@ aggressiveness is estimated accurately without the confounding effect of age
 through the effective age and aging rate parameters.
 
 We found that cancer types, as expected, have a range of prognoses relative to
-the general population. In **Fig 5B-D** we show how effective age baseline, and
+the general population. In **Figure 5B-D** we show how effective age baseline, and
 effective age rate (which modifies the baseline based on your actual age) as
 well as the $k_{tis}$ which accelerates or decelerates further aging, varies
 considerably from cancer to cancer. For example a 20 year old diagnosed with
@@ -38,7 +38,7 @@ diagnosis adds about 1 year of risk, whereas for LGG patients it adds around 2,
 and for SARC patients it adds only 0.25 or so.
 
 
-In **Fig 5E-H** we see three particularly deadly cancers (Glioblastoma:GBM,
+In **Figure 5E-H** we see three particularly deadly cancers (Glioblastoma:GBM,
 Pancreatic:PAAD, Ovarian:OV), and one cancer where diagnosis hardly changes risk
 relative to background (Thyroid: THCA). Cancers with posterior probability for
 relative risk of less than 1 should be interpreted carefully. This Bayesian
@@ -59,7 +59,7 @@ Our estimates of tissue-specific cluster effects were for the Effective Age
 parameter. These cluster effects were multiplied by the tissue specific
 coefficient to form the full effective age. Priors for this parameter were
 relatively peaked around 1 reflecting the purpose of this coefficient as a
-multiplicative perturbation (**Fig 6**). A cluster-specific rate of 1 represents
+multiplicative perturbation (**Figure 6**). A cluster-specific rate of 1 represents
 the typical rate for this tissue type. For several cancers (_e.g._  PRAD, kidney
 chromophobe (KICH), diffuse large B-cell lymphoma (DLBC), thyroid cancer (THCA))
 the posterior estimates are largely indistinguishable from the prior, reflecting
@@ -82,7 +82,7 @@ uniform random p, by inverting the cumulative distribution function of our death
 probability function. Using the actual tdeath from TCGA as the reference, we
 show that our pathway-based clustering (referred to as kNN) had slightly better
 performance compared to COCA [@hoadleyMultiplatformAnalysis2014], iCluster
-[@hoadleyCellofOriginPatternsDominate2018] and tissue-of-origin (tis). (**S5A
-Fig**). Additionally, we computed the entropy of the error distribution in
-predictions (**S5B Fig**).  All models had similar performance with kNN
+[@hoadleyCellofOriginPatternsDominate2018] and tissue-of-origin (tis). (**
+Figure S5A**). Additionally, we computed the entropy of the error distribution in
+predictions (**Figure S5B**).  All models had similar performance with kNN
 performing slightly better as indicated by a slightly smaller error entropy.
