--- a/code/figure4.Rmd
+++ b/code/figure4.Rmd
@@ -167,7 +167,7 @@ tdat_all <- left_join(
 tdat_all <- all_compare_plot %>% left_join(tdat_all)
 tdat_all_p <- tdat_all %>% ggplot(aes(type, Row_Index, fill = c_prop)) +
   geom_tile() +
-  scale_fill_viridis_c(option = "E", "Proportion of \nTumor Type \nMutated Within Cluster", limits = c(0, 1)) +
+  scale_fill_viridis_c(option = "E", "Proportion of \nTumor Type \nMutated Within  \nCluster", limits = c(0, 1)) +
   xlab("Tumor Type") +
   ylab("Gene Symbol") +
   scale_y_discrete(labels = Hugo_rownames) +
