--- a/text/manuscript.Rmd
+++ b/text/manuscript.Rmd
@@ -1,8 +1,9 @@
 ---
 title: "A molecular taxonomy of tumors independent of tissue-of-origin"
-author: Peter T. Nguyen$^{1,¶}$, Simon G. Coetzee$^{1,¶}$, Daniel L. Lakeland$^{2}$, and
-  Dennis J. Hazelett$^{1,3,*}$
+author: Peter T. Nguyen$^{1,4}$, Simon G. Coetzee$^{1,4}$, Daniel L. Lakeland$^{2}$, and
+  Dennis J. Hazelett$^{1,3,5,*}$
 bibliography: references.bib
+nocite: '@*'
 csl: iscience.csl
 output:
   word_document:
@@ -11,7 +12,7 @@ always_allow_html: TRUE
 editor_options:
   chunk_output_type: console
 ---
-###### Institutional affiliations: $^{1}$The Center for Bioinformatics and Functional Genomics, Cedars-Sinai Medical Center, Los Angeles, CA, 90048, USA. $^{2}$Lakeland Applied Sciences LLC, Los Angeles, CA, 91001, USA. $^{3}$Samuel Oschin Comprehensive Cancer Institute, Cedars-Sinai Medical Center, Los Angeles, CA, 90048, USA. $^{¶}$These authors contributed equally to this work. $^{*}$Correspondence: Dennis.Hazelett@cshs.org
+###### Institutional affiliations: $^{1}$The Center for Bioinformatics and Functional Genomics, Cedars-Sinai Medical Center, Los Angeles, CA, 90048, USA. $^{2}$Lakeland Applied Sciences LLC, Los Angeles, CA, 91001, USA. $^{3}$Samuel Oschin Comprehensive Cancer Institute, Cedars-Sinai Medical Center, Los Angeles, CA, 90048, USA. $^{4}$These authors contributed equally. $^{5}$Lead Contact $^{*}$Correspondence: Dennis.Hazelett@cshs.org
 
 ```{r, results='asis', echo = FALSE}
 #cat("\\newpage")
@@ -145,7 +146,7 @@ see interactive media from **File S1** (junkdnalab.shinyapps.io/PANCAN_supplemen
 used the resulting graph coordinates to perform density based clustering
 with HDBSCAN [@hdbscan], which resulted in identification of 10 well-defined
 clusters capturing about 80% of the tumor samples. To capture the remaining
-samples into one of these 10 clusters we used kNN (see **Supplementary Methods**
+samples into one of these 10 clusters we used kNN (see **STAR Methods**
 for details on clustering methods).
 
 ### Independence from tissue-of-origin.
@@ -370,16 +371,19 @@ biologically meaningful distinction of the clusters. Finally, if treatments can
 be specialized to biological information encoded in cluster, perhaps this could
 drive dramatic improvements in survival among some clusters in the future.
 
-## Author Contributions
-P.N., S.G. and D.L. conducted the experiments. D.H. designed the experiments and wrote the paper.
-
 ## Acknowledgements
 
 We wish to thank David Van Valen, Kate Lawrenson, Simon Knott, and Megan
 Hitchens, for critical comments on this manuscript, and Tim Triche Jr for
 suggested improvements to the preprint. We also thank Ivetth Corona for early
-discussions and feedback. This work was supported by a grant from the 
-Cedars-Sinai Precision Health Initiative.
+discussions and feedback. Research reported in this publication was supported 
+in part by Graduate Research Education at Cedars-Sinai (P.N.), by a Cedars-Sinai 
+Precision Health award (D.H.), by institutional commitments to D.H., and by the
+Office of the Director, National Institutes of Health under Award Number 
+OT2OD026675 (D.H.).
+
+## Author Contributions
+P.N., S.G. and D.L. conducted the experiments. D.H. designed the experiments and wrote the paper.
 
 ## Declaration of Interests
 
@@ -396,7 +400,7 @@ indicate the tumor's cluster identity throughout this manuscript.
 
 **Figure 2. Pathway-based clustering independent of tissue-of-origin** 
 A) Sankey plot of correspondence between cancer type and cluster identity.
-B) Projection of breast cancer subtypes onto the UMAP. C) Projection of BRCA1/2
+B) Projection of breast cancer subtypes onto the UMAP. See also Figure S1. C) Projection of BRCA1/2
 somatic mutation onto the UMAP. D) Projection of tumor stage onto the UMAP,
 regardless of cancer type. E) Projection of metastatic status onto the UMAP.
 Abbrevs: M0 = non-metastatic tumors, M1 = metastatic tumors. F) Somatic mutation 
@@ -452,75 +456,265 @@ distribution when the number of observations is N<10, α = 0.1; N<25, α = 0.5; 
 
 **Table 1: Cluster-specific enriched pathways (effect size ≥ 0.30) in metastasis.**
 
-## Resource Availability
+## STAR Methods
 
-Further information and requests for resources should be directed to and will
-be fulfilled by the Lead Contact, Dennis Hazelett (Dennis.Hazelett@cshs.org). Data
-generated in this study have been deposited to Zenodo (https://doi.org/10.5281/zenodo.4011291).
-All code for producing the analyses and figures herein are included in this fully reproducible 
-manuscript in R markdown format. R markdown files and all other models are available from our 
-repositories (https://github.com/dennishazelett/TTmanu) on the distributed
-version control site, GitHub. An interactive media of the results is available on https://junkdnalab.shinyapps.io/PANCAN_supplemental/.
+### KEY RESOURCES TABLE
 
-## Methods
+### RESOURCES AVAILABILITY
+### Lead contact
+Requests for further information and resources should be directed to the Lead Contact, 
+Dennis J. Hazelett (Dennis.Hazelett@cshs.org).
 
-Extended descriptions of clustering, models,
-formulae, pathway selection, and gene filtering are provided in supplementary
-methods. 
+### Materials availbility
+This study did not generate any new material.
+
+### Data and code availability
+* This paper analyzes existing, publicly available data. These datasets are listed 
+in the key resources table. Data generated in this study have been deposited at Zenodo 
+and are publicly available as of the date of publication. DOI is listed in the key 
+resources table.
+* All code for producing the analyses and figures herein are included in this fully 
+reproducible manuscript in R markdown format. R markdown files and all other models are 
+available from our repository on the distributed version control site, Github, listed 
+in the key resources table.
+* Any additional information required to reanalyze the data reported in this paper is 
+available from the lead contact upon request.
+
+### METHOD DETAILS
+
+### Selection of pathways
+
+To understand the molecular mechanism of cancer at a pathway level, we used
+Reactome (https://reactome.org/), a knowledge-based pathway database. The
+mapping files of ENSEMBL genes to pathways, pathway hierarchy relationships, and
+complexes to top pathways were downloaded from
+https://reactome.org/download-data. Using these data, we imposed pathway
+criteria to define basic cellular processes and biochemical pathways: (1)
+human-derived pathways ( _“HSA"_ ) (2) limited to grandchild node for each
+parent pathway (_e.g._ ‘Beta-catenin independent WNT signaling’ in ‘Signal
+Transduction’) (3) exclusion of pathways in the parent pathway: "Disease",
+"Muscle contraction", and "Reproduction" or pathway names that include any of
+the following keywords: "disease", "defect", "cancer", "oncogenic", "disorder",
+"mutant", "loss", "infection", "bacteria", or "listeria". While some of the
+excluded pathways have been shown to play an important role in cancer, they are
+highly specialized (_e.g._ "PI3K/AKT Signaling in Cancer"). Additionally, for
+most of the excluded pathways, a neutral version pathway of the pathway exists
+(_e.g._ "PIP3 activates Akt signaling"). Finally, we mapped the 18,577
+Ensembl IDs from the TCGA dataset to the highly selected Reactome pathways. This
+operation produced a lookup table that consisted of 377 pathways mapped to 8,940
+genes.
+
+### Filtering genes
+
+We filtered likely erroneous mutations due to transcription coupled repair. Our
+approach was to determine the status of each gene (_i.e._ expressed or not
+expressed) in each tissue type in order to exclude lowly expressed
+genes. To do this, we obtained the TCGA RNA sequencing data adjusted for batch
+effect dataset (https://pancanatlas.xenahubs.net). Using the data, we removed
+the genes and tumor samples that were not included in our analysis, grouped the
+tumor samples by tissue type and computed the mean expression value for each
+gene. A minimum threshold of 10 transcripts per million was set for expressed
+genes based on an inflection point observed when plotting the mean expression
+values of genes ranked by expression in each tissue type. Genes that did not
+meet this threshold were considered not expressed. This operation produced a
+lookup table for gene expression status in each tumor sample for 18,127 genes.
+
+### Clustering
+
+In order to classify tumors using this dataset, we used multiple correspondence
+analysis (MCA) [@JSSv025i01]. First, we determined the number of dimensions
+containing useful information by selecting the eigenvalue with the most
+explanatory power, using the average of 100 permutations of the data as baseline
+(**Figure S6A**). We then chose the maximum eigenvalue for which the p-value
+remained ≤ 0.05 (see cutoff in **Figure S6B**). Then we performed a UMAP
+analysis [@McInnes2018], both in order to summarize the MCA graphically, and as
+a preprocessing step to boost the performance of density based clustering. The
+resulting map was notable for its lobed structure, with several reproducible
+projections regardless of random seed setting. A representative version of this
+3D UMAP is shown in **Figure S6C**, rotated to enhance the visibility of the
+major features. Following this spatial mapping we attempted to define groupings
+of similar tumors within the spatial map using HDBSCAN, which performs
+hierarchical clustering and provides metrics of cluster stability and
+probabilities of cluster membership for each node [@hdbscan]. However, HDBSCAN
+is sensitive to several parameters; key for our analysis are the minimum number
+of tumor samples in a cluster that capture the maximum number of tumor samples,
+measured by probability of membership of ≥ 5% in at least one cluster. Thus, we
+created a score metric as the fraction of classified tumors with max probability
+< 5% in one cluster and chose a cluster size of 92 to minimize the score
+function (**Figure S6D**). HDBSCAN with these settings resulted in ten distinct
+high-density clusters which we then projected onto the UMAP (**Figure S6E**).
+This classified 6,038 out of 7,607 tumors but still resulted in a significant
+fraction of unclassified tumor samples. Since we ultimately wish to be able to
+classify any tumor using this scheme, we performed k Nearest Neighbors (kNN)
+analysis, which computes a similarity metric to every tumor in the set and then
+lets the _k_ most similar tumors "vote" as to the identity of the query tumor
+sample based on their cluster labels. We set _k_ to be the square root of the
+number of tumor samples (87). Using this method, we assigned cluster membership
+to the remaining tumors (**Figure S6F** and see interactive media from **File S1** 
+(junkdnalab.shinyapps.io/PANCAN_supplemental/)).
+
+### Survival
+
+We used Bayesian inference to explore the relative impact of cancer diagnosis on
+survival at the time of diagnosis. Our model assumes that at birth each person
+has a small initial probability per unit time to die, and that this probability
+grows exponentially in time at some baseline rate that matches the observed CDC
+data. We assume that at diagnosis this information will allow us to treat
+patients as if they were a different age, and with further time passing at a
+different rate, a self-similarity based model. The effective age at diagnosis is
+based on a baseline age for that tissue/class combination, plus a perturbation
+for each year over 20 years old at diagnosis. To fit the model, we constrain the
+baseline risks using the available CDC life tables (**Figure S7**). We also
+constrain the cancer specific parameters using the longevity data within the
+cancer tumor dataset. Our model estimates the effect of cancer type and
+class-specific cancer effects independently, resulting in a cancer and class
+specific estimate of the effective age.
+
+Most TCGA cases are diagnosed late in life, so we fit a model that emphasizes
+accuracy in the right tail of the distribution. We modeled baseline longevity
+using a risk rate function. The risk rate of death at a time $t$ days after the
+$A$ birthday is given as:
+
+$$R(t) = R_{20}\exp(a(A-20) + D(t) k a (\frac{t}{365}))$$ 
+
+Time is split into two components. $A$ represents the "effective age" of the
+patient at diagnosis, whereas $t$ starts at 0 upon diagnosis and represents the
+days since diagnosis, a field recorded in the dataset. $D(t)$
+is an indicator for whether diagnosis has occurred or not (before diagnosis
+$D(t) = 0$, after $D(t) = 1$). The model assumes that the risk of death is
+$R_{20}$ at age 20 years and increases exponentially with a constant rate $a$ up
+to the age at diagnosis. Risk of death assumes a new rate $ka$ thereafter.
+
+Given this risk per unit time, the probability of death at time $T+dT$ is the
+probability to survive to time $T$ which is $(1-P(T))$ and then die in the
+remaining interval which is $R(T)dT$
+
+$$dP = (1-P(T)) R(T) dT$$
+
+leading to the differential equation for the cumulative probability of death
+$P(T)$
+
+$$\frac{dP}{dT} = (1-P(T))R(T)$$
+
+The solution of this ODE is:
+
+$$P(T) = 1 - \exp(-\int_0^T R(t) dt)$$
+
+And the density of deaths per unit time is the derivative with respect to T:
+
+$$p(T) = R(T) \exp(-\int_0^T R(t)dt)$$
+
+However, to model the risk of cancer effectively we found that it was necessary
+not to use the actual age $A'$ but instead the "effective age" for that
+tissue/class type. Our effective age is calculated as:
+
+$$A = A_{0} A_{cl} + A_r (A'-20)$$ Where $A_0$ is the tissue specific effective
+age parameter (expressed in years), $A_{cl}$ is a dimensionless multiplier for
+the given class, and $A_r$ is the dimensionless age rate which determines how
+actual age $A'$ affects effective age A using a linear perturbation. For a
+non-cancer patient, $A_0=20$, $A_{cl}=1$, and $A_r=1$ are the relevant
+benchmarks.
+
+The $R(T)$ function has two important parameters, the $a$ value which represents
+the background risk rates, and the $k$ value, which is a function of cancer
+tissue type.
+
+$$k = k_{tis}$$
+
+The product $A_0 A_{cl}$ is obviously symmetric between the two factors. To
+disambiguate the meaning of the two, the prior for $A_0$ has high probability
+range from about 40 to 100 years, whereas the prior distribution of $A_{cl}$ has
+peak probability at 1 and a relatively narrow width, due to the fact that it is
+a tissue specific multiplicative modifying factor. To understand the roles of
+these priors refer to (**Figure S8**).
+
+Using this model, we split the data by Male/Female sex. Sex is known to be a
+risk factor for death, with males dying at slightly higher rates for all ages of
+interest in our dataset.
+
+As an aside, we did not explicitly account for stage at diagnosis in our model
+for the following reasons. In the tumor sample data, stage at diagnosis is
+confounded with cancer type because some cancers are screened aggressively
+(_e.g._ colorectal and prostate cancers) while others are diagnosed typically
+after they become problematic for the patient's lifestyle (_e.g._ ovarian and
+pancreatic cancers). Secondly, such a model specification would suffer from
+added noise because the staging data are not well standardized across cancer
+types, have different criteria, and because it is unclear what the relationship
+between stage and advancement of disease is (for example some sub-stage 4 tumors
+are metastatic). To compound this latter issue, our tumor set is vastly
+under-powered given the uneven representation of stage across cancer types.
+
+### QUANTIFICATION AND STATISTICAL ANALYSIS
+
+### Class and stage-specific Enrichment Calculations
+
+We calculated the enrichment of pathways in one set of tumors as the relative
+fraction of tumors (with estimated uncertainty) with a mutated gene in the
+pathway to all tumors, inclusive of the category of interest. To do this
+operation, we use the beta distribution to permute a posterior distribution on
+the fraction of tumors with a pathway mutated for each category based on the
+observed set, and compared this to the posterior obtained from the full set of
+tumors (all tumors) as the distribution of differences between all permuted
+samples. We considered a pathway enriched if the 95% range of credible
+differences thus obtained excludes 0 and the mean credible difference was
+greater than or equal to 30% enrichment, which excludes a large number of small
+differences that are not likely to be biologically relevant.
+
+## Supplemental Figure and Table Legends
+
+**Figure S1. Distribution of cancer type on UMAP clusters, Related to Figure 2.** Each panel shows the identity of 
+individual tumors by one of 23 cancer types projected onto the cluster UMAP identified 
+in **Figure 1B of the main text**. The colors indicate the tumor's cluster identity.
+
+**Figure S2. Histological subtypes, Related to Figure 2.** Each panel shows the histological subtypes of one of the 23 
+cancers projected onto the tumors of the UMAP from **Figure 1B of the main text**. The colors 
+indicate the tumor's histological subtype identity.
+
+**Figure S3. Distribution of mismatch repair genes on UMAP clusters, Related to Figure 2.** Each panel shows one of 15 
+genes involved in genome stability projected on the UMAP from **Figure 1B of the main text**. 
+The colors indicate the tumor's cluster identity.
+
+**Figure S4. Distribution of oncogenes/tumor suppressors on UMAP clusters, Related to Figure 2.** Each panel shows 
+one of the twelve oncogenes/tumor suppressors projected onto the tumors of the UMAP from 
+**Figure 1B of the main text**. The colors indicate the tumor's cluster identity.
+
+**Figure S5. Performance comparison of different classification model - knn, COCA, iCluster, 
+tissue-of-origin (tis), Related to Figure 5.** A) Empirical cumulative distribution function comparing time of death 
+prediction of all classification models with actual time of death (dark green). B) Error 
+distribution plot of predicted and actual time of death.
+
+**Figure S6. Method for tumor classification using pathway aberration data, Related to Figure 1.** 
+A) MCA analysis was performed to determine the eigenvalue with the most
+explanatory power from the categorical data. Average of 100 permutations of the
+data was used as a baseline. B) The p-value of each eigenvalue was plotted and
+the max eigenvalue with a pvalue < 0.05 was selected. C) The resulting MCA was
+projected down to 3 dimensions for the purpose of density based clustering (only
+the first 2 dimensions are shown). Each dot represents a tumor D) HDBSCAN was
+used to perform hierarchical density based clustering tuned to minimize the
+fraction of unassigned tumors. E) HDBSCAN clustered tumors were visualized on
+the UMAP projection; tumors are colored by cluster membership (see legend). This
+results in some tumors remaining unclassified (grey points). F) kNN was used to
+assign membership to the remaining tumors.
+
+**Figure S7. Comparison between CDC data and ODE model fit for
+males and females of European descent, Related to Figure 5.** This comparison does not distinguish on
+ethnicity for simplicity in visualization.
+
+**Figure S8. Priors for the tissue and class coefficients, Related to Figure 5 and 6.** A) The tissue
+coefficient is chosen to admit ages between 40 and 100 years old as a baseline
+age. B) Within a given tissue, the class parameter multiplies the tissue value and
+is given a peak density at 1, and a credible range from near 0.6 to 1.4,
+reflecting our expectation of a moderate multiplicative perturbation of
+variation across the classes.
+
+**Table S1. Ranked pan-cancer reactome pathway mutation, Related to Figure 1.** 
+Pathways are ranked from highest to lowest percent mutated. Gene 1-3 are the top 3 
+pathway genes mutated.
+
+**Table S2. Cluster-specific enriched pathways (effect size $\ge$ 0.30), Related to Figure 3.**
+
+**File S1. An interactive media of the results, Related to Figure 1-6.**
 
 ## References
 
 <div id="refs"></div>
-
-```{r, results='asis'}
-cat("\\newpage")
-```
-
-#### Fig 1
-```{r child='../code/figure1.Rmd'}
-```
-
-```{r, results='asis'}
-cat("\\newpage")
-```
-
-#### Fig 2
-```{r child = '../code/figure2.Rmd'}
-```
-
-```{r, results='asis'}
-cat("\\newpage")
-```
-
-#### Fig 3
-```{r child = '../code/figure3.Rmd'}
-```
-
-```{r, results='asis'}
-cat("\\newpage")
-```
-
-#### Fig 4
-```{r child = '../code/figure4.Rmd'}
-```
-
-#### Fig 5
-```{r child='../code/survival/figure5.Rmd'}
-```
-
-```{r, results='asis'}
-cat("\\newpage")
-```
-
-#### Fig 6
-
-```{r child='../code/figure6.Rmd'}
-```
-
-```{r, results='asis'}
-cat("\\newpage")
-```
-
-#### Table 1
-```{r child = '../code/table1.Rmd'}
-```
